<package format="2">
  <name>s57_grids</name>
  <version>0.0.0</version>
  <description>
    Generate grids from S57 marine chart data
  </description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  <author>Roland Arsenault</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libgdal-dev</build_depend>
  <depend>grid_map_ros</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>s57_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <export>
  </export>
</package>
