<package format="2">
    <name>s57_msgs</name>
    <version>0.0.0</version>
    <description>
    This package provides message types for use with S57 nautical chart data.
    </description>
    
    <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
    
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>geographic_msgs</depend>

    <export>
    </export>
    
</package>
